[gd_scene load_steps=9 format=2]

[ext_resource path="res://tilesets/WeltMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Sprout.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Pot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Sunlight.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/cobble.png" type="Texture" id=7]
[ext_resource path="res://Scenes/WeltManager.gd" type="Script" id=8]

[node name="WeltManager" type="Node2D"]
script = ExtResource( 8 )

[node name="WeltCamera" type="Camera2D" parent="."]
position = Vector2( -113, 0 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="Sprite" type="Sprite" parent="WeltCamera"]
show_behind_parent = true
position = Vector2( 113, 0 )
z_index = -5
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 2048, 2048 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="L1" type="Node2D" parent="."]
pause_mode = 1

[node name="Sprout" parent="L1" instance=ExtResource( 3 )]
position = Vector2( -187, -4 )

[node name="Door" parent="L1" instance=ExtResource( 6 )]
position = Vector2( -205, 176 )

[node name="Sunlight" parent="L1" instance=ExtResource( 5 )]
position = Vector2( -376, 216 )
scale = Vector2( 1, 0.2 )
z_index = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Button" parent="L1" instance=ExtResource( 2 )]
position = Vector2( -163, 196 )

[node name="Pot" parent="L1" instance=ExtResource( 4 )]
position = Vector2( -268, 200 )

[node name="Pot2" parent="L1" instance=ExtResource( 4 )]
position = Vector2( -58, 24 )
isStatic = true

[node name="WeltCenter" type="Position2D" parent="L1"]
position = Vector2( -113, 0 )

[node name="L2" type="Node2D" parent="."]
position = Vector2( 666, 237 )

[node name="Sprout" parent="L2" instance=ExtResource( 3 )]
position = Vector2( -345, -301 )
is_first_sprout = false

[node name="WeltCenter" type="Position2D" parent="L2"]
position = Vector2( -27, -237 )

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
